# asgard

./: Cargo.toml  LICENSE  build.rs
docs/: arch.drawio  arch.html
protos/: asgard_api.proto  asgard_messages.proto
src/: asgard_data.rs  asgard_error.rs  asgardian.rs  common.rs  lib.rs  log.rs  messages.rs  role.rs
src/asgard/: common.rs
src/asgard/role/: common.rs  mod.rs  role.rs
src/protobuf_messages/: asgard_messages.rs  mod.rs
src/state/: asgard_state.rs  asgardian.rs  mod.rs
src/state/role/: king.rs
src/transport/: grpc.rs  messageIO.rs  mod.rs
