[package]
name = "asgard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
message-io = "0.14.3"
prost = "0.9"
prost-types = "0.9"

[build-dependencies]
prost-build = { version =  "0.9"}